@@ -1,3 +1,6 @@
+* Thu Oct 8 2012 Dan Prince <dprince@redhat.com> - 1.2.4
+  - XenServer: Delete VDI's that aren't in use during cleanup.
+
 * Thu Sep 20 2012 Dan Prince <dprince@redhat.com> - 1.2.3
   - XenServer: Use vm-clone once a vm has been imported to speed up
     group creation.
